Stop obnoxiously long PM titles from hroz stretching the inbox/sent tables.

--- a/ISS/static-src/src/private-messages/private-messages.less
+++ b/ISS/static-src/src/private-messages/private-messages.less
@@ -52,6 +52,10 @@
         }
 
         td, th {
+          a {
+            word-break: break-all;
+          }
+
           &:nth-child(2) { 
             width: 20%;
           }
@@ -133,6 +137,10 @@
             .teal();
           }
         }
+      }
+
+      .paginator {
+        margin-top: 20px;
       }
     }
   }
